<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soccer Group Manager</string>
    <string name="group_manager">Manager:</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="group_stats">Stats</string>
    <string name="group_managment">Group Managment</string>
    <string name="start_match">Start Match</string>
    <string name="choose_red_team">Select Red Team</string>
    <string name="choose_yellow_team">Select Yellow Team</string>
    <string name="duration">Duration</string>
    <string name="pause_button">Pause</string>
    <string name="goal_button">Goal!</string>
    <string name="end_game_button">End Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_soccer_prefs">SoccerPrefsActivity</string>
    <string name="title_activity_show_settings">ShowSettingsActivity</string>

</resources>