<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/group_logo" />
			
	    <TextView
	        android:id="@+id/GroupName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/group_manager"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/Admin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />

	</LinearLayout>
	    
	<Button
        android:id="@+id/letsPlayButton"
        style="@android:style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_play"/>

    <Button
        android:id="@+id/groupStats"
        style="@android:style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_stats" />

    <Button
        android:id="@+id/groupManagment"
        style="@android:style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_managment" />

</LinearLayout>