<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <FrameLayout
        android:layout_width="392dp"
        android:layout_height="match_parent">
    
	    <ImageView
	        android:id="@+id/soccer_field"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:src="@drawable/soccer_field" />
	    
	    <ImageButton
	        android:id="@+id/imageButton1"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/noya"
	        android:layout_gravity="top"/>
	    
	    <ImageButton
	        android:id="@+id/imageButton2"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/gali"
	        android:layout_gravity="bottom"/>

	    <ImageButton
	        android:id="@+id/imageButton3"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/yuli" />

	    <ImageButton
	        android:id="@+id/imageButton4"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/roni" />

	    <ImageButton
	        android:id="@+id/imageButton5"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/shayu" 
	        android:layout_gravity="center"/>
	    
	</FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:0"
            android:textSize="50sp" />

        <DigitalClock
            android:id="@+id/stopage_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9:59" android:textSize="35sp" android:singleLine="true"/>

        <Button
            android:id="@+id/pause_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pause_button" />

        <Button
            android:id="@+id/goal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_button" />

        <Button
            android:id="@+id/end_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_game_button" />

    </LinearLayout>

</LinearLayout>